# LAMI

./: .gitignore  CMakeLists.txt  DESKTOP.md  README.md
.github/workflows/: build.yml
installer/: lami.iss
installer/linux/: install.sh
src/: main.cpp
src/auth/: MicrosoftAuth.cpp  MicrosoftAuth.h  README.md
src/bridge/: Bridge.cpp  Bridge.h  WsServer.cpp  WsServer.h  backend_main.cpp
src/core/: AppConfig.h  InstanceManager.cpp  InstanceManager.h  ModArchive.cpp  ModArchive.h  ModScanner.cpp  ModScanner.h  Publisher.cpp  Publisher.h
src/github/: GitHubClient.cpp  GitHubClient.h  Models.cpp  Models.h  README.md
src/minecraft/: Downloader.cpp  Downloader.h  FabricMeta.cpp  FabricMeta.h  ForgeInstaller.cpp  ForgeInstaller.h  JavaProvisioner.cpp  JavaProvisioner.h  LaunchBuilder.cpp  LaunchBuilder.h  MojangMeta.cpp  MojangMeta.h  README.md  VersionInfo.cpp  VersionInfo.h
src/roles/: Permissions.cpp  Permissions.h  README.md
src/shell/: lami.rc.in  shell_main.cpp
src/sync/: README.md  SyncManager.cpp  SyncManager.h
src/ui/: HomePage.cpp  HomePage.h  LoginPage.cpp  LoginPage.h  MainWindow.cpp  MainWindow.h
tests/: test_admin.cpp  test_archive.cpp  test_auth.cpp  test_bridge.cpp  test_download.cpp  test_fabric.cpp  test_forge.cpp  test_github.cpp  test_install_forge.cpp  test_instance.cpp  test_java.cpp  test_launch.cpp  test_launch_diag.cpp  test_minecraft.cpp  test_publish.cpp  test_repoedit.cpp  test_roles.cpp  test_scan.cpp  test_sync.cpp  test_ws.cpp
web/: atraxe-ui.html  bridge.js
worker/: README.md  package.json  wrangler.toml
worker/src/: index.js
